// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scan component should render with AUTHORIZED props 1`] = `
<SafeAreaViewComponent>
  <Component
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Gradient
      style={
        Object {
          "height": 44,
        }
      }
    />
    <Component />
    <Component
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "height": 1182.3971830985915,
          "position": "relative",
        }
      }
    >
      <UNDEFINED
        flashMode="off"
        onBarCodeRead={[Function]}
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
          }
        }
        type="back"
      />
      <Component
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <Connect(AddressModal)
          doneButtonPressed={[MockFunction]}
          onExitButtonFxn={[Function]}
        />
        <Component
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#4A5157",
                "justifyContent": "center",
                "opacity": 0.95,
                "padding": 10.776056338028168,
              },
            ]
          }
        >
          <FormattedText
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 21.552112676056336,
                  "textAlign": "center",
                },
              ]
            }
          >
            Scan to Send, Import, or Edge Login
          </FormattedText>
        </Component>
        <Component
          style={
            Array [
              Object {
                "flex": 10,
              },
            ]
          }
        />
        <Gradient
          style={
            Array [
              Object {
                "flexDirection": "row",
                "height": 110.83943661971831,
                "paddingBottom": 16.93380281690141,
                "paddingLeft": 12.315492957746478,
                "paddingRight": 12.315492957746478,
                "paddingTop": 16.93380281690141,
              },
            ]
          }
        >
          <TouchableHighlight
            activeOpacity={0.85}
            delayPressOut={100}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF10",
                "borderRadius": 4.618309859154929,
                "flex": 1,
                "height": 76.97183098591549,
                "justifyContent": "center",
                "marginLeft": 1.5394366197183098,
                "marginRight": 1.5394366197183098,
              }
            }
            underlayColor="#0E4B75"
          >
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <Icon
                allowFontScaling={false}
                name="address-book-o"
                size={27.70985915492958}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 24.630985915492957,
                      "height": 24.630985915492957,
                      "transform": Array [
                        Object {
                          "scaleX": -1,
                        },
                      ],
                    },
                  ]
                }
              />
              <FormattedText
                style={
                  Array [
                    undefined,
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#FFFFFF",
                      "fontSize": 21.552112676056336,
                      "opacity": 1,
                    },
                  ]
                }
              >
                Address
              </FormattedText>
            </Component>
          </TouchableHighlight>
          <TouchableHighlight
            activeOpacity={0.85}
            delayPressOut={100}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF10",
                "borderRadius": 4.618309859154929,
                "flex": 1,
                "height": 76.97183098591549,
                "justifyContent": "center",
                "marginLeft": 1.5394366197183098,
                "marginRight": 1.5394366197183098,
              }
            }
            underlayColor="#0E4B75"
          >
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <Icon
                allowFontScaling={false}
                name="ios-flash-outline"
                size={36.946478873239435}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 33.86760563380282,
                      "height": 27.70985915492958,
                    },
                  ]
                }
              />
              <FormattedText
                style={
                  Array [
                    undefined,
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#FFFFFF",
                      "fontSize": 21.552112676056336,
                      "opacity": 1,
                    },
                  ]
                }
              >
                Flash
              </FormattedText>
            </Component>
          </TouchableHighlight>
        </Gradient>
      </Component>
      <Connect(ABAlert) />
    </Component>
  </Component>
  <Connect(LegacyAddressModal)
    cancelButtonPressed={[MockFunction]}
    continueButtonPressed={[MockFunction]}
  />
  <Connect(PrivateKeyModal) />
</SafeAreaViewComponent>
`;

exports[`Scan component should render with DENIED props 1`] = `
<SafeAreaViewComponent>
  <Component
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Gradient
      style={
        Object {
          "height": 44,
        }
      }
    />
    <Component />
    <Component
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "height": 1182.3971830985915,
          "position": "relative",
        }
      }
    >
      <Component />
      <Component
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <Connect(AddressModal)
          doneButtonPressed={[MockFunction]}
          onExitButtonFxn={[Function]}
        />
        <Component
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#4A5157",
                "justifyContent": "center",
                "opacity": 0.95,
                "padding": 10.776056338028168,
              },
            ]
          }
        >
          <FormattedText
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 21.552112676056336,
                  "textAlign": "center",
                },
              ]
            }
          >
            Scan to Send, Import, or Edge Login
          </FormattedText>
        </Component>
        <Component
          style={
            Array [
              Object {
                "flex": 10,
              },
            ]
          }
        >
          <Component
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                },
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "fontSize": 21.552112676056336,
                  "padding": 20,
                  "textAlign": "center",
                }
              }
            >
              To scan a QR Code, please enable Camera access in Settings
            </Text>
            <TouchableHighlight
              activeOpacity={0.85}
              delayPressOut={100}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#0E4B75",
                  "padding": 10,
                }
              }
              underlayColor="black"
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#FFFFFF",
                  }
                }
              >
                Open Settings
              </Text>
            </TouchableHighlight>
          </Component>
        </Component>
        <Gradient
          style={
            Array [
              Object {
                "flexDirection": "row",
                "height": 110.83943661971831,
                "paddingBottom": 16.93380281690141,
                "paddingLeft": 12.315492957746478,
                "paddingRight": 12.315492957746478,
                "paddingTop": 16.93380281690141,
              },
            ]
          }
        >
          <TouchableHighlight
            activeOpacity={0.85}
            delayPressOut={100}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF10",
                "borderRadius": 4.618309859154929,
                "flex": 1,
                "height": 76.97183098591549,
                "justifyContent": "center",
                "marginLeft": 1.5394366197183098,
                "marginRight": 1.5394366197183098,
              }
            }
            underlayColor="#0E4B75"
          >
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <Icon
                allowFontScaling={false}
                name="address-book-o"
                size={27.70985915492958}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 24.630985915492957,
                      "height": 24.630985915492957,
                      "transform": Array [
                        Object {
                          "scaleX": -1,
                        },
                      ],
                    },
                  ]
                }
              />
              <FormattedText
                style={
                  Array [
                    undefined,
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#FFFFFF",
                      "fontSize": 21.552112676056336,
                      "opacity": 1,
                    },
                  ]
                }
              >
                Address
              </FormattedText>
            </Component>
          </TouchableHighlight>
          <TouchableHighlight
            activeOpacity={0.85}
            delayPressOut={100}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF10",
                "borderRadius": 4.618309859154929,
                "flex": 1,
                "height": 76.97183098591549,
                "justifyContent": "center",
                "marginLeft": 1.5394366197183098,
                "marginRight": 1.5394366197183098,
              }
            }
            underlayColor="#0E4B75"
          >
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <Icon
                allowFontScaling={false}
                name="ios-flash-outline"
                size={36.946478873239435}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 33.86760563380282,
                      "height": 27.70985915492958,
                    },
                  ]
                }
              />
              <FormattedText
                style={
                  Array [
                    undefined,
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#FFFFFF",
                      "fontSize": 21.552112676056336,
                      "opacity": 1,
                    },
                  ]
                }
              >
                Flash
              </FormattedText>
            </Component>
          </TouchableHighlight>
        </Gradient>
      </Component>
      <Connect(ABAlert) />
    </Component>
  </Component>
  <Connect(LegacyAddressModal)
    cancelButtonPressed={[MockFunction]}
    continueButtonPressed={[MockFunction]}
  />
  <Connect(PrivateKeyModal) />
</SafeAreaViewComponent>
`;
